--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,14 @@ body {
     padding: 0 15px;
 }
 
+.none {
+    display: none;
+}
+
+.menu-btn {
+    display: none;
+}
+
 /* HEADER */
 
 .header {
@@ -76,18 +84,19 @@ body {
     color: var(--text-purple);
     font-size: 64px;
     font-weight: 700;
-    line-height: 77px;
+    line-height: 1.3;
 }
 
 .headline-img {
     margin-bottom: 25px;
+    max-width: 100%;
 }
 
 .headline-btn {
     display: inline-block;
     font-size: 24px;
     font-weight: 700;
-    line-height: 29px;
+    line-height: 1.3;
     color: #FFF;
     text-transform: uppercase;
     padding: 22px 117px 19px;
@@ -111,7 +120,7 @@ body {
     text-transform: uppercase;
     text-align: center;
     font-size: 32px;
-    line-height: 39px;
+    line-height: 1.3;
     font-weight: 700;
     color: var(--light-gray);
 }
@@ -164,9 +173,6 @@ body {
 
 /* SECTION CONTACTS */
 
-.contacts {
-}
-
 .contacts-inner {
     display: flex;
     background-color: var(--bg-purple);
@@ -186,7 +192,7 @@ body {
     text-align: left;
     font-size: 32px;
     font-weight: 700;
-    line-height: 39px;
+    line-height: 1.3;
 }
 
 .contacts-input {
@@ -228,6 +234,10 @@ body {
     transition: all 0.2s ease-in;
 }
 
+.contacts-img {
+    width: 100%;
+}
+
 /* FOOTER */
 
 .footer {
@@ -248,10 +258,7 @@ body {
     flex-grow: 1;
     flex-basis: 0;
 }
-.logo {
-}
-.logo-img {
-}
+
 .phone {
     font-size: 24px;
     line-height: 29px;
